--- a/VScode/Graduation_project_testing_modules/data/style.css
+++ b/VScode/Graduation_project_testing_modules/data/style.css
@@ -55,6 +55,11 @@
      color:#8c8c8c;
      font-weight: bold;
    }
+   .LoRaData {
+    font-size: 1rem;
+    color:#8c8c8c;
+    font-weight: bold;
+  }
 
    table{ 
     font-family: arial, sans-serif;
